--- a/app/templates/auth/login.html
+++ b/app/templates/auth/login.html
@@ -9,11 +9,12 @@
       integrity="sha384-rbsA2VBKQhggwzxH7pPCaAqO46MgnOM80zW1RWuH61DGLwZJEdK2Kadq2F9CUG65"
       crossorigin="anonymous"
     />
-    <link href="{{ url_for('static', filename='singin.css') }}" rel="stylesheet" />
+    <link href="{{ url_for('static', filename='signin.css') }}" rel="stylesheet" />
   </head>
   <body class="text-center">
     <main class="form-signin w-100 m-auto">
       <form>
+        <img class="img-fluid" src="{{url_for('static', filename='logo.png')}}" alt="logo">
         <h1 class="h3 mb-3 fw-normal">Кабинет сотрудника</h1>
 
         <div class="form-floating">
