--- a/app/templates/auth/login.html
+++ b/app/templates/auth/login.html
@@ -1,54 +1,19 @@
-<!DOCTYPE html>
-<html lang="ru">
-  <head>
-    <meta charset="utf-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <link
-      href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css"
-      rel="stylesheet"
-      integrity="sha384-rbsA2VBKQhggwzxH7pPCaAqO46MgnOM80zW1RWuH61DGLwZJEdK2Kadq2F9CUG65"
-      crossorigin="anonymous"
-    />
-    <link href="{{ url_for('static', filename='signin.css') }}" rel="stylesheet" />
-  </head>
-  <body class="text-center">
-    <main class="form-signin w-100 m-auto">
-      <form>
-        <img class="img-fluid" src="{{url_for('static', filename='logo.png')}}" alt="logo">
-        <h1 class="h3 mb-3 fw-normal">Кабинет сотрудника</h1>
+{% extends 'base.html' %}
+{% from 'bootstrap5/form.html' import render_form, render_field, render_form_row %}
 
-        <div class="form-floating">
-          <input
-            type="text"
-            class="form-control"
-            id="floatingInput"
-            placeholder="СНИЛС"
-          />
-          <label for="floatingInput">СНИЛС</label>
-        </div>
-        <div class="form-floating">
-          <input
-            type="password"
-            class="form-control"
-            id="floatingPassword"
-            placeholder="Пароль"
-          />
-          <label for="floatingPassword">Пароль</label>
-        </div>
+{% block content %}
 
-        <div class="checkbox mb-3">
-          <label>
-            <input type="checkbox" value="remember-me" /> Запонить меня
-          </label>
-        </div>
-        <button class="w-100 btn btn-lg btn-primary" type="submit">Вход</button>
-      </form>
-    </main>
+<div class="row mt-5">
+  <div class="col-md-4"></div>
+  <div class="col-md-4"><h1>Кабинет сотрудника</h1></div>
+  <div class="col-md-4"></div>
+</div>
+<div class="row">
+  <div class="col-md-4"></div>
+  <div class="col-md-4 mt-5">
+    {{render_form(form)}}
+  </div>
+  <div class="col-md-4"></div>
+</div>
 
-    <script
-      src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js"
-      integrity="sha384-kenU1KFdBIe4zVF0s0G1M5b4hcpxyD9F7jL+jjXkk+Q2h455rYXK/7HAuoJl+0I4"
-      crossorigin="anonymous"
-    ></script>
-  </body>
-</html>
+{% endblock content %}
