--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -1,23 +1,29 @@
+{% from 'bootstrap5/utils.html' import render_messages %}
 <!DOCTYPE html>
 <html lang="ru">
 
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>{% block title %}{% endblock title %}</title>
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet"
-        integrity="sha384-9ndCyUaIbzAi2FUVXJi0CjmCapSmO7SnpJef0486qhLnuZ2cdeRhO02iuK6FUUVM" crossorigin="anonymous">
+    {% block head %}
+
+        <meta charset="UTF-8">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
+
+        {% block styles %} {{bootstrap.load_css() }} {% endblock styles %}
+
+        <title>{% block title %}{% endblock title %}</title>
+
+    {% endblock head %}
 </head>
 
 <body>
     
-    {% include '_navbar.html' %}
-
-    {% block content %}{% endblock content %}
+    <main class="container mt-5">
+        {{ render_messages(container=False, dismissible=True, dismiss_animate=True) }}
+        {% block content %}{% endblock %}
+    </main>
+   
+    {% block scripts %} {{bootstrap.load_js()}} {% endblock scripts %}
     
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"
-        integrity="sha384-geWF76RCwLtnZ8qwWowPQNguL3RmwHVBC9FhGdlKrxdiJJigb/j/68SIy3Te4Bkz"
-        crossorigin="anonymous"></script>
 </body>
 
 </html>
